chore(pivot): Moves grid in wrapper to fix z-index; adds dates to a custom date dimension and makes it a row

--- a/src/app/pivot-grid/pivot-datasource/pivot-data-selector-sample.component.scss
+++ b/src/app/pivot-grid/pivot-datasource/pivot-data-selector-sample.component.scss
@@ -23,3 +23,8 @@ igx-pivot-grid {
     flex: 1 1 auto;
     order: 0;
 }
+
+.pivot-grid-wrapper {
+    position: relative;
+    z-index: 0;
+}
